Add a PR build that has the Unsafe buffer implementation enabled